Add target/deployment pages

--- a/configuration/api/controllers.yml
+++ b/configuration/api/controllers.yml
@@ -46,6 +46,15 @@ services:
         class: 'Hal\UI\Controllers\API\Server\ServerController'
         arguments: ['@api.response_formatter']
 
+
+    ####################################################################################################################
+    # TARGET CONTROLLERS
+    ####################################################################################################################
+
+    target.api:
+        class: 'Hal\UI\Controllers\API\Target\TargetController'
+        arguments: ['@api.response_formatter', '@api_normalizer.deployment']
+
     ####################################################################################################################
     # BUILD CONTROLLERS
     ####################################################################################################################
