--- a/configuration/routes/routes.api.yml
+++ b/configuration/routes/routes.api.yml
@@ -124,6 +124,15 @@ parameters:
                     stack: ['middleware.api_require_entity', 'server.api']
 
                 ################################################################################################################
+                # TARGET ROUTES
+                ################################################################################################################
+
+                api.target:
+                    method: 'GET'
+                    route: '/targets/{target:%r.digit%}'
+                    stack: ['middleware.api_require_entity', 'target.api']
+
+                ################################################################################################################
                 # BUILD ROUTES
                 ################################################################################################################
 
