--- a/configuration/routes/routes.yml
+++ b/configuration/routes/routes.yml
@@ -315,18 +315,73 @@ parameters:
             stack: ['middleware.signed_in', 'middleware.require_entity', 'push.start.middleware', 'push.start.page']
 
         ################################################################################################################
+        # ADMIN ROUTES
+        ################################################################################################################
+
+        admin.management:
+            route: '/admin'
+            stack: ['middleware.is_admin']
+            routes:
+                admin:
+                    method: 'GET'
+                    route: ''
+                    stack: ['admin.dashboard.page']
+
+                admin.audit_history.page1:
+                    method: 'GET'
+                    route: '/audit-history'
+                    stack: ['admin.audit_history.page']
+                admin.audit_history:
+                    method: 'GET'
+                    route: '/audit-history/page/{page:%r.digit%}'
+                    stack: ['admin.audit_history.page']
+
+        ################################################################################################################
+        # SUPER ROUTES
+        ################################################################################################################
+
+        super.management:
+            route: '/super'
+            stack: ['middleware.is_super']
+            routes:
+
+                super.system:
+                    method: 'GET'
+                    route: '/system'
+                    stack: ['super.system.page']
+                super.system.agent:
+                    method: 'GET'
+                    route: '/system/{agent:%r.alphanum%}'
+                    stack: ['super.system.page']
+
+                super.caches:
+                    method: ['GET', 'POST']
+                    route: '/caches'
+                    stack: ['super.caches.page']
+
+                super.message:
+                    method: ['GET', 'POST']
+                    route: '/message'
+                    stack: ['super.message.page']
+
+        ################################################################################################################
 
         # routes not created yet
 
         admin: {route: '/derp1', stack: []}
         settings: {route: '/derp4', stack: []}
         user: {route: '/derp11', stack: []}
+        users: {route: '/derp111', stack: []}
         group: {route: '/derp13', stack: []}
         group.add: {route: '/derp133', stack: []}
 
         settings.favorite_applications.remove.handler: {route: '/derp36', stack: []}
         settings.favorite_applications.add.handler: {route: '/derp37', stack: []}
         pools: {route: '/derp38', stack: []}
+        latest_release: {route: '/derp39', stack: []}
+
+        admin.permissions: {route: '/derp55', stack: []}
+        admin.credentials: {route: '/derp555', stack: []}
 
         api.environments: {route: '/derp14', stack: []}
         api.environment: {route: '/derp24', stack: []}
