--- a/configuration/api/routes.internal.yml
+++ b/configuration/api/routes.internal.yml
@@ -6,21 +6,11 @@ parameters:
             route: '/api/internal'
             routes:
 
-                ################################################################################################################
-                # INTERNAL API ROUTES (for use by local javascript)
-                ################################################################################################################
-
-                # api_internal.deployment.status:
-                #     method: 'GET'
-                #     route: '/api/internal/applications/:application/environments/:environment/status'
-                #     stack: ['middleware.login', 'middleware.api.require_entity', 'api_internal.deployment.status']
-                #     conditions:
-                #         application: '%routes.regex.digit%'
-                #         environment: '%routes.regex.digit%'
-
-                ################################################################################################################
-                # INTERNAL API ROUTES (for use by local javascript)
-                ################################################################################################################
+                # Used by: Child deploy on build page
+                api_internal.deployment_status:
+                    method: 'GET'
+                    route: '/applications/{application:%r.digit%}/environments/{environment:%r.digit%}/status'
+                    stack: ['middleware.signed_in', 'middleware.api_require_entity', 'api_internal.deployment_status']
 
                 # Note: this endpoint is also available for direct form posts
                 api_internal.favorite_applications:
